<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>3.5.7</version>
    <relativePath /> <!-- lookup parent from repository -->
  </parent>

  <groupId>trusthub.ots</groupId>
  <artifactId>opentimestamp-poc</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <name>opentimestamp-poc</name>

  <properties>
    <java.version>21</java.version>
  </properties>

  <dependencies>
    <!-- WebFlux (Reactor Netty server) -->
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-webflux</artifactId>
    </dependency>

    <!-- Actuator (opcional, útil para health/metrics) -->
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-actuator</artifactId>
    </dependency>

    <!-- Devtools (hot reload during development) -->
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-devtools</artifactId>
      <scope>runtime</scope>
      <optional>true</optional>
    </dependency>

    <!-- Testing -->
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-test</artifactId>
      <scope>test</scope>
      <!-- exclude JUnit vintage (not required normally) -->
    </dependency>

    <!-- OpenTimestamps java library -->
    <dependency>
      <groupId>com.eternitywall</groupId>
      <artifactId>java-opentimestamps</artifactId>
      <version>1.20</version>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-maven-plugin</artifactId>
      </plugin>
  </plugins>
</build>
</project>
